# transforming-attention

./: .gitignore  README.md  create_env.sh  notebook.ipynb  requirements.txt
.github/workflows/: github-pages.yml
examples/: decode_sentences.py
pytorch/: bleu.py  data.py  predict.py  predict2.py  train.py  transformer.py  utils.py
rust/: Cargo.toml  Dockerfile  pod.yaml
rust/src/: config.rs  data.rs  feed_forward.rs  lib.rs  main.rs  normalization.rs  projection.rs  residual_connections.rs  transformer.rs  util.rs
rust/src/attention/: mod.rs  multihead.rs
rust/src/decoder/: decoder.rs  decoder_block.rs
rust/src/embeddings/: input_embeddings.rs  mod.rs  positional_embeddings.rs  transformer_embeddings.rs
rust/src/encoder/: encoder.rs  encoder_block.rs
t2t/: environment.yaml  merge_parquet.py  pod.yaml  tfrecords_to_parquet.py
t2t/docker/: Dockerfile  start-singleuser.py
