[package]
name = "ta"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.2", features = ["cuda"] } #, features = ["cuda"] }
candle-datasets = "0.8.2"
candle-hf-hub = "0.3.3"
candle-nn = { version = "0.8.2", features = ["cuda"] }
hf-hub = { version = "0.4.1" }
polars = { version = "0.45.1", features = ["cloud", "dtype-struct", "lazy", "parquet"] }
tokenizers = { version = "0.21.0", features = ["http"] }

[[bin]]
name = "data"
path = "src/bin/data.rs"
