[package]
name = "ta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
candle-core = { version = "0.8.2" } #, features = ["cuda"] }
candle-datasets = "0.8.2"
candle-hf-hub = "0.3.3"
candle-nn = { version = "0.8.2" }
candle-optimisers = "0.8.0"
clap = "4.5.27"
env_logger = "0.11.6"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
log = "0.4.25"
polars = { version = "0.44", features = ["cloud", "dtype-struct", "lazy", "parquet"] }
tokenizers = { version = "0.21.0", features = ["http"] }
tracing = "0.1.41"

[features]
gpu = ["candle-core/cuda", "candle-nn/cuda"]

[profile.dev]
opt-level = 1

[[bin]]
name = "data"
path = "src/bin/data.rs"

[[bin]]
name = "manual"
path = "src/bin/manual.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "predict"
path = "src/bin/predict.rs"
